// This file provides the definitions for a linear orchestration.
syntax = "proto3";

option go_package = "github.com/DuarteMRAlves/maestro/test/protobuf/unit";

import "google/protobuf/empty.proto";

package unit;

service LinearSource {
  rpc Process(google.protobuf.Empty) returns (LinearMessage);
}

service LinearTransform {
  rpc Process(LinearMessage) returns (LinearMessage);
}

service LinearSink {
  rpc Process(LinearMessage) returns (google.protobuf.Empty);
}

message LinearMessage {
  int64 value = 1;
}